# attractor_implementation

./: .gitignore  LICENSE  TODO.md  pyproject.toml
attractor/: __init__.py  __main__.py  cli.py
attractor/backends/: __init__.py
attractor/backends/coding_agent/: __init__.py  backend.py  environment.py  profile.py  session.py  tools.py
attractor/condition/: __init__.py  evaluator.py
attractor/engine/: __init__.py  edge_selector.py  retry.py  runner.py
attractor/handlers/: __init__.py  codergen.py  conditional.py  exit_.py  fan_in.py  manager_loop.py  parallel.py  registry.py  start.py  tool.py  wait_human.py
attractor/interviewer/: __init__.py  auto_approve.py  base.py  callback.py  console.py  queue_.py  recording.py
attractor/model/: __init__.py  artifact.py  checkpoint.py  context.py  types.py
attractor/parser/: __init__.py  dot_parser.py  lexer.py
attractor/server/: __init__.py  app.py  events.py  question_store.py
attractor/stylesheet/: __init__.py  applicator.py  parser.py
attractor/transforms/: __init__.py  stylesheet.py  variable_expansion.py
attractor/validation/: __init__.py  rules.py  validator.py
examples/: branching.dot  human_gate.dot  simple.dot
tests/: test_coding_agent_backend.py  test_condition.py  test_edge_selector.py  test_parser.py  test_runner.py  test_validation.py
