[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "attractor"
version = "0.1.0"
description = "DOT-based pipeline runner for multi-stage AI workflows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "click>=8.1.0",
    "aiofiles>=23.2.0",
    "sse-starlette>=2.1.0",
    "prompt_toolkit>=3.0",
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]
ollama = [
    "ollama>=0.3.0",
]

[project.scripts]
attractor = "attractor.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["attractor*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
